--- a/delete-account.html
+++ b/delete-account.html
@@ -1,43 +1,86 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>حذف الحساب</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet" />
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f8f8f8;
-      color: #333;
-      padding: 20px;
+      font-family: 'Cairo', sans-serif;
+      background-color: #f2f4f7;
+      margin: 0;
+      padding: 0;
+      color: #222;
+    }
+
+    .container {
       max-width: 800px;
-      margin: auto;
+      margin: 60px auto;
+      background-color: #fff;
+      padding: 40px 30px;
+      border-radius: 16px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
+    }
+
+    h1 {
+      color: #d32f2f;
+      font-size: 28px;
+      margin-bottom: 16px;
+    }
+
+    h2 {
+      font-size: 22px;
+      margin-top: 30px;
+      color: #333;
+    }
+
+    p, li {
+      font-size: 16px;
       line-height: 1.8;
     }
-    h1 {
-      color: #d9534f;
+
+    ol {
+      padding-right: 20px;
     }
+
     a {
-      color: #007bff;
+      color: #1976d2;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    .footer {
+      margin-top: 40px;
+      font-size: 14px;
+      color: #777;
+      text-align: center;
     }
   </style>
 </head>
 <body>
-  <h1>حذف الحساب</h1>
-  <p>نحن نحترم خصوصيتك ونعمل على تمكينك من التحكم الكامل في بياناتك.</p>
+  <div class="container">
+    <h1>🗑️ حذف الحساب</h1>
+    <p>نحن نهتم بخصوصيتك ونمنحك الحرية الكاملة في التحكم ببياناتك.</p>
 
-  <h2>كيفية حذف الحساب من داخل التطبيق:</h2>
-  <ol>
-    <li>افتح التطبيق على جهازك.</li>
-    <li>انتقل إلى صفحة <strong>الإعدادات</strong>.</li>
-    <li>اضغط على <strong>"حذف الحساب"</strong>.</li>
-    <li>قم بتأكيد العملية، وسيتم حذف حسابك وبياناتك المرتبطة بشكل نهائي.</li>
-  </ol>
+    <h2>📱 خطوات حذف الحساب من داخل التطبيق:</h2>
+    <ol>
+      <li>افتح التطبيق على جهازك المحمول.</li>
+      <li>اذهب إلى قسم <strong>الإعدادات</strong>.</li>
+      <li>اختر خيار <strong>"حذف الحساب"</strong>.</li>
+      <li>قم بتأكيد العملية. سيتم حذف حسابك وبياناتك المرتبطة بشكل دائم.</li>
+    </ol>
 
-  <h2>هل تواجه مشكلة؟</h2>
-  <p>إذا لم تتمكن من حذف حسابك لأي سبب، يمكنك التواصل معنا عبر البريد الإلكتروني:</p>
-  <p><a href="mailto:support@yourapp.com">support@yourapp.com</a></p>
+    <h2>🛠️ تواجه صعوبة؟</h2>
+    <p>في حال واجهت أي مشكلة أثناء عملية الحذف، لا تتردد في التواصل معنا عبر البريد الإلكتروني التالي:</p>
+    <p><a href="mailto:support@yourapp.com">support@yourapp.com</a></p>
 
-  <p>نحن هنا لمساعدتك في أي وقت ❤️</p>
+    <div class="footer">
+      © جميع الحقوق محفوظة لمتجرك - 2025
+    </div>
+  </div>
 </body>
 </html>
