--- a/delete-account.html
+++ b/delete-account.html
@@ -76,7 +76,7 @@
 
     <h2>🛠️ تواجه صعوبة؟</h2>
     <p>في حال واجهت أي مشكلة أثناء عملية الحذف، لا تتردد في التواصل معنا عبر البريد الإلكتروني التالي:</p>
-    <p><a href="mailto:support@yourapp.com">support@yourapp.com</a></p>
+    <p><a href="mailto:mohabader213@gmail.com">support@yourapp.com</a></p>
 
     <div class="footer">
       © جميع الحقوق محفوظة لمتجرك - 2025
